--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Application can create a QR Code and fetch employee details",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "dev": "nodemon \"./server/server.js",
     "start": "node \"./server/server.js"
   },
@@ -15,6 +15,7 @@
     "@azure/identity": "^4.9.1",
     "@azure/msal-node": "^3.5.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "azure-function-express": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
