--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "dev": "nodemon \"./server/server.js",
-    "start": "node \"./server/server.js"
+    "start": "node \"./server/server.js",
+    "build": "echo \"No Build Required for API\" && exit 0"
   },
   "author": "Bhavesh",
   "license": "ISC",
