--- a/.github/workflows/master_pitverify.yml
+++ b/.github/workflows/master_pitverify.yml
@@ -38,7 +38,7 @@ jobs:
           popd
 
       - name: Zip artifact for deployment
-        run: cd api && zip -r ../release.zip ./*
+        run: zip -r release.zip api
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
