modified yml file

--- a/.github/workflows/master_pitverify.yml
+++ b/.github/workflows/master_pitverify.yml
@@ -38,7 +38,7 @@ jobs:
           popd
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip api
+        run: zip -r release.zip api package.json package-lock.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
