modified yml file

--- a/.github/workflows/master_pitverify.yml
+++ b/.github/workflows/master_pitverify.yml
@@ -56,8 +56,8 @@ jobs:
         with:
           name: node-app
 
-      - name: Unzip artifact
-        run: unzip release.zip
+      # - name: Unzip artifact
+      #   run: unzip release.zip
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
