--- a/.github/workflows/master_pitverify.yml
+++ b/.github/workflows/master_pitverify.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Archive Function App code
         run: |
           cd server
-          zip -r ../release.zip api package.json package-lock.json
+          npm install
+          zip -r ../release.zip api node_modules package.json package-lock.json
 
       - name: Log in to Azure
         uses: azure/login@v1
