--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@azure/identity": "^4.9.1",
     "@azure/msal-node": "^3.5.1",
+    "@codegenie/serverless-express": "^4.16.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@vendia/serverless-express": "^4.12.6",
     "azure-function-express": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "isomorphic-fetch": "^3.0.0",
     "passport": "^0.7.0",
