--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node copyRoutes.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
