added custom domain

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
 VITE_API_URL=https://pitverify.azurewebsites.net/api
-VITE_FRONTEND_URL=https://gentle-stone-089c4d30f.6.azurestaticapps.net
+VITE_FRONTEND_URL=https://verifyme.predictiveit.com
