--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@azure/identity": "^4.9.1",
     "@azure/msal-node": "^3.5.1",
+    "@azure/storage-blob": "^12.27.0",
     "@codegenie/serverless-express": "^4.16.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@vendia/serverless-express": "^4.12.6",
@@ -22,7 +23,12 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "formidable": "^3.5.4",
+    "install": "^0.13.0",
     "isomorphic-fetch": "^3.0.0",
+    "mime-types": "^3.0.1",
+    "multiparty": "^4.2.3",
+    "npm": "^11.4.0",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
     "react": "^19.1.0"
