--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@vendia/serverless-express": "^4.12.6",
     "azure-function-express": "^1.1.0",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
